[project]
name = "doxgxxn"
version = "0.1.0"
description = "first distribution"
authors = [
    {name = "doxgxxn", email = "praze74@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
